--- a/.github/workflows/salmonstats.yml
+++ b/.github/workflows/salmonstats.yml
@@ -32,7 +32,8 @@ jobs:
         run: |
           git config --local user.email "nasawake.am@gmail.com"
           git config --local user.name "tkgstrator"
-          git pull
+          git config pull.rebase false
+          git pull origin salmonstats
           if (git diff --shortstat | grep '[0-9]'); then \
             git add .; \
             git commit -m "- SalmonStatsの記録のアップデート"; \
