--- a/.github/workflows/salmonstats.yml
+++ b/.github/workflows/salmonstats.yml
@@ -3,7 +3,7 @@ name: SalmonStatsの記錄のアップデート
 on:
   push:
     branches:
-      - salmonstats
+      - master
   schedule:
     - cron: "0 0 * * *"
 
@@ -33,7 +33,7 @@ jobs:
           git config --local user.email "nasawake.am@gmail.com"
           git config --local user.name "tkgstrator"
           git config pull.rebase false
-          git pull salmonstats
+          git pull master
           if (git diff --shortstat | grep '[0-9]'); then \
             git add .; \
             git commit -m "- SalmonStatsの記録のアップデート"; \
