--- a/.github/workflows/salmonstats.yml
+++ b/.github/workflows/salmonstats.yml
@@ -33,7 +33,7 @@ jobs:
           git config --local user.email "nasawake.am@gmail.com"
           git config --local user.name "tkgstrator"
           git config pull.rebase false
-          git pull master
+          git pull
           if (git diff --shortstat | grep '[0-9]'); then \
             git add .; \
             git commit -m "- SalmonStatsの記録のアップデート"; \
